dependencies:
${MIRROR_WGET}/download_package ftp.pir.georgetown.edu.proisoform | tee -a $LOG || exit 1
${MIRROR_WGET}/download_package pir.georgetown.edu.proisoform | tee -a $LOG || exit 1
${MIRROR_WGET}/download_package build.berkeleybop.org.goload | tee -a $LOG || exit 1
${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload | tee -a $LOG || exit 1
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload | tee -a $LOG || exit 1
${MIRROR_WGET}/download_package ftp.geneontology.org.goload | tee -a $LOG || exit 1

TAG: goload-6-0-6-8
DATE: 12/08/2016
STAFF: lec 
CHANGES:
TR12474/gocfp/gocfp.config.default change

TAG: goload-6-0-6-7
DATE: 11/30/2016
STAFF: lec 
CHANGES:
goamouse - use lib/ubersonlib.py

TAG: goload-6-0-6-6
DATE: 11/29/2016
STAFF: lec 
CHANGES:
lib/uberonlib.py fix

TAG: goload-6-0-6-5
DATE: 11/09/2016
STAFF: lec 
CHANGES:
fix gorefgen/index.html

TAG: goload-6-0-6-4
TAG: goload-6-0-6-3
TAG: goload-6-0-6-2
TAG: goload-6-0-6-1
DATE: 09/12/2016
STAFF: lec 
CHANGES:
TR12345/GO-Noctua/GPAD/GPI
TR12378/isoforms are now in their own file : see config/ISOFORM
goamouse/goamouse.config.default/goamouse.py

TAG: goload-tr12349
DATE: 07/07/2016
STAFF: lec 
CHANGES: TR12349/gone-dor & more
TR12345/GO-Noctua/GPAD/GPI

TAG: goload-6-0-4-6
TAG: goload-6-0-4-5
TAG: goload-6-0-4-4
TAG: goload-6-0-4-3
TAG: goload-6-0-4-2
TAG: goload-6-0-4-1
DATE: 06/14/2016
STAFF: lec 
CHANGES: TR12349/gone-dor & more
TR12345/GO-Noctua/GPAD/GPI
1) wrapper for all go-loads
goamouse  : goaload
goahuman  : goahumanload
goarat    : goratload
goacfp    : gocfpload
goarefgen : gorefgenload