@@ -6,6 +6,13 @@ ${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload | tee -a $LOG 
 ${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload | tee -a $LOG || exit 1
 ${MIRROR_WGET}/download_package ftp.geneontology.org.goload | tee -a $LOG || exit 1
 
+TAG: goload-6-0-6-?
+DATE: 12/08/2016
+STAFF: lec 
+CHANGES:
+TR11938/goamouse/autoindex marker/autoselect reference
+new: goamousepost.py
+
 TAG: goload-6-0-6-8
 DATE: 12/08/2016
 STAFF: lec 
